# sineys-jam

./: .gitignore  Cargo.toml  flake.nix  geng_template.js  geng_template.wasm
.github/workflows/: flow.yml
src/: assets.rs  end_screen.rs  game.rs  main.rs  prelude.rs
src/model/: camera.rs  mod.rs  player.rs
src/model/components/: mod.rs  position.rs
src/model/components/collider/: mod.rs  shape.rs
src/model/logic/: collision.rs  control.rs  generation.rs  mod.rs  movement.rs  particles.rs
src/render/: mod.rs
