[package]
name = "geng_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
geng = "0.15.0"
geng-utils = "0.1.0"
ecs = { git = "https://github.com/geng-engine/ecs" }
serde = { version = "1.0.188", features = ["derive"] }
parry2d = "0.13.5"
